--- a/test.html
+++ b/test.html
@@ -5,10 +5,13 @@
 <body>
 
 <h1>Test Page</h1>
-<p>This is a website deticated to Jamal Halili</h1>
-
+<p>This is a website test</h1>
+<hr>
 <h2>Links</h2>
 <a href="https://github.com/dylanneve1">Test link</a>
+<hr>
+<p>Thank you for visiting.</p>
+<p>Hope you come again.</p>
 
 
 </body>
