Update to add breaks

--- a/test.html
+++ b/test.html
@@ -12,7 +12,14 @@
 <hr>
 <p>Thank you for visiting.</p>
 <p>Hope you come again.</p>
-
+<p>
+This paragraph
+contains a lot of lines
+in the source code,
+but the browser 
+ignores it.
+</p>
+<p>Test break<br>BREAK<br>Anotherbreak.</p>
 
 </body>
 
