Update test.html again

--- a/test.html
+++ b/test.html
@@ -23,5 +23,12 @@ ignores it.
 
 </body>
 
+<body style="background-color:powderblue;">
+<h1>Contributors</h1>
+<a href="http://www.github.com/jamalhalili03">https://github.com/jamalhalili03</a> <br>
+<a href="http://www.github.com/dylanneve1">https://github.com/dylanneve1</a>
+
+</body>
+
 
 </html>
