--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
 <body>
 
 <h1>Test Page</h1>
-<p>This is a website test</h1>
+<p>This is a website test</p>
 <hr>
 <h2>Links</h2>
 <a href="https://github.com/dylanneve1">Test link</a>
