--- a/test.html
+++ b/test.html
@@ -2,28 +2,17 @@
 
   <head>
 
-    <title>Page Title</title>
+    <title>Jamal's new pet</title>
 
   </head>
 
   <body>
 
-    <h1>Test Page</h1>
-    <p>This is a website test</p>
+    <h1>Welcome!</h1>
+    <p>Unless you pay for a dynamic IP service, your local IP address—and, by extension, your website's address—will change from time to time.</p>
     <hr>
     <h2>Links</h2>
-    <a href="https://github.com/dylanneve1">Test link</a>
-    <hr>
-    <p>Thank you for visiting.</p>
-    <p>Hope you come again.</p>
-    <p>
-      This paragraph
-      contains a lot of lines
-      in the source code,
-      but the browser 
-      ignores it.
-    </p>
-    <p>Test break<br>BREAK<br>Anotherbreak.</p>
+    <a href="https://github.com/dylanneve1">My github</a>
   
   </body>
   <body style="background-color:powderblue;">
