--- a/home.html
+++ b/home.html
@@ -7,22 +7,31 @@
   </head>
 
   <body>
-
-    <h1>Welcome!</h1>
-    <p>Unless you pay for a dynamic IP service, your local IP address—and, by extension, your website's address—will change from time to time.</p>
+    <h1>Jamal's new pet</h1>
+    <p>Welcome to the fanpage of Jamal Halili.</p>
     <hr>
     <h2>Links</h2>
-    <a href="https://github.com/dylanneve1">My github</a>
-	<br>
-	<br>
+	<a href="https://drive.google.com/open?id=1-9_8CQMrBrBKAIq7SaLfXWyD-jwFUlOBFs9DR8VZPa8">Clockwork Jamal (in progress)</a> <br>
+	<a href="https://drive.google.com/open?id=1GJ34LQuAXZ33Veb8kkK5XMZYiJW7zqxoDbsTieLMlAI">Jamalian (in progress)</a> <br>
 	<br>
   </body>
   <body style="background-color:powderblue;">
     
-    <h1>Contributors</h1>
+    <h2>Contributors</h2>
     <a href="http://www.github.com/jamalhalili03">https://github.com/jamalhalili03</a> <br>
     <a href="http://www.github.com/dylanneve1">https://github.com/dylanneve1</a>
- 
+	<br>
+  </body>
+  
+  <body>
+    <h2>Videos</h2>
+    <iframe width="420" height="315"
+    src="https://www.youtube.com/embed/7XHeDoDlYXI">
+    </iframe>
   </body>
 
+  <body>
+    <h2>Leaked images</h2>
+    <img src="photo_jamal.jpg" alt="Where's JAMAL" style="width:500px;height:500px;">
+	<br>
 </html>
