--- a/home.html
+++ b/home.html
@@ -10,9 +10,8 @@
     <h1>Jamal's new pet</h1>
     <p>Welcome to the fanpage of Jamal Halili.</p>
     <hr>
-    <h2>Links</h2>
-	<a href="https://drive.google.com/open?id=1-9_8CQMrBrBKAIq7SaLfXWyD-jwFUlOBFs9DR8VZPa8">Clockwork Jamal (in progress)</a> <br>
-	<a href="https://drive.google.com/open?id=1GJ34LQuAXZ33Veb8kkK5XMZYiJW7zqxoDbsTieLMlAI">Jamalian (in progress)</a> <br>
+	<h2>Index</h2>
+	<a href="fictions.html"><button>Go To Fan Fictions</button></a>
 	<br>
   </body>
   <body style="background-color:powderblue;">
@@ -31,7 +30,6 @@
   </body>
 
   <body>
-    <h2>Leaked images</h2>
-    <img src="photo_jamal.jpg" alt="Where's JAMAL" style="width:500px;height:500px;">
+    <p>Taken down at the request of Jamal :(</p>
 	<br>
 </html>
