Rename and update

--- a/fictions.html
+++ b/fictions.html
@@ -4,7 +4,13 @@
      <title>Fan Fictions</title>
   </head>
   
-  <body> 
+  <body style="background-color:powderblue;">
+    <h1>Jamal Fan Fictions!</h1>
+          <p>Here you can find our fan fictions (some may still be in development)</p>
+        <hr>
+    <h2>Index</h2>
+	<a href="home.html"><button>Go To Home</button></a>
+	<br>
     <h2>Links</h2>
 	<a href="https://drive.google.com/open?id=1-9_8CQMrBrBKAIq7SaLfXWyD-jwFUlOBFs9DR8VZPa8">Clockwork Jamal (in progress)</a> <br>
 	<a href="https://drive.google.com/open?id=1GJ34LQuAXZ33Veb8kkK5XMZYiJW7zqxoDbsTieLMlAI">Jamalian (in progress)</a> <br>
