--- a/fictions.html
+++ b/fictions.html
@@ -9,7 +9,7 @@
           <p>Here you can find our fan fictions (some may still be in development)</p>
         <hr>
     <h2>Index</h2>
-	<a href="home.html"><button>Go To Home</button></a>
+	<a href="index.html"><button>Go To Home</button></a>
 	<br>
     <h2>Links</h2>
 	<a href="https://drive.google.com/open?id=1-9_8CQMrBrBKAIq7SaLfXWyD-jwFUlOBFs9DR8VZPa8">Clockwork Jamal (in progress)</a> <br>
