--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <hr>
 	<h2>Index</h2>
 	<a href="fictions.html"><button>Go To Fan Fictions</button></a>
+	<a href="contacts.html"><button>Go To Contact Us Page</button></a>
 	<br>
   </body>
   <body style="background-color:powderblue;">
