Update contact us

--- a/contacts.html
+++ b/contacts.html
@@ -6,6 +6,7 @@
   
   <body style="background-color:powderblue;">
   <h1>Contact us page</h1>
+  <p>Here you can contact us</p>
   <hr>
   
   <h2>Index</h2>
