--- a/media.html
+++ b/media.html
@@ -1,5 +1,12 @@
 <html>
-
-
+  
+  <head>
+    <title>Photos and Videos</title>
+  </head>
+  
+  <body>
+    <h1>Photos and Videos</h1>
+    <p>Photos and Videos of Jamal</p>
+  </body>
 
 </html>
