Update index to add media button

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 	<a href="fictions.html"><button>Go To Fan Fictions</button></a>
 	<a href="contacts.html"><button>Go To Contact Us Page</button></a>
 	<br>
+	<a href="media.html"><button>Go To Photos and Videos Page</button></a>
+	<br>
   </body>
   <body style="background-color:powderblue;">
     
