Update to add media button

--- a/fictions.html
+++ b/fictions.html
@@ -9,8 +9,10 @@
         <p>Here you can find our fan fictions (some may still be in development)</p>
         <hr>
     <h2>Index</h2>
-	  <a href="index.html"><button>Go To Home</button></a>
-	  <a href="contacts.html"><button>Go To Contact Us Page</button></a>
+	<a href="index.html"><button>Go To Home</button></a>
+	<a href="contacts.html"><button>Go To Contact Us Page</button></a>
+        <br>
+	<a href="media.html"><button>Go To Photos and Videos Page</button></a>
 	<br>
     
 	<h2>Links</h2>
