Add media button in contacts

--- a/contacts.html
+++ b/contacts.html
@@ -13,6 +13,8 @@
   <a href="index.html"><button>Go To Home</button></a>
   <a href="fictions.html"><button>Go To Fan Fictions</button></a>
   <br>
+	<a href="media.html"><button>Go To Photos and Videos Page</button></a>
+  <br>
   
   <h2>Emails</h2>
   <p>dylanneve1@gmail.com</p>
