Add index to media page

--- a/media.html
+++ b/media.html
@@ -7,6 +7,13 @@
   <body>
     <h1>Photos and Videos</h1>
     <p>Photos and Videos of Jamal</p>
+    <hr>
+    <h2>Index</h2>
+    <a href="fictions.html"><button>Go To Fan Fictions</button></a>
+	  <a href="contacts.html"><button>Go To Contact Us Page</button></a>
+	  <br>
+	  <a href="home.html"><button>Go To Home Page</button></a>
+	  <br>
   </body>
 
 </html>
