--- a/contacts.html
+++ b/contacts.html
@@ -1,10 +1,12 @@
+<!DOCTYPE html>
 <html>
 
   <head>
   <title>Contact us</title>
+  <link rel="stylesheet" type="text/css" href="mystyle.css">
   </head>
   
-  <body style="background-color:powderblue;">
+  <body>
   <h1>Contact us page</h1>
   <p>Here you can contact us</p>
   <hr>
