--- a/index.html
+++ b/index.html
@@ -1,10 +1,39 @@
+<!DOCTYPE html>
 <html>
 
   <head>
-
+    <link rel="stylesheet" type="text/css" href="mystyle.css">
     <title>Jamal's new pet</title>
 
   </head>
+  
+  <style>
+  p {
+    text-align: center;
+    color: darkblue;
+  } 
+  body {
+    background-color: lightgreen;
+  }
+  h1 {
+     text-align: center;
+	 color: darkblue;
+  }
+  h2 {
+     text-align: center;
+	 color: darkblue;
+  }
+  button {
+     text-align: center;
+  }
+  div {
+    border: 1px solid black;
+    padding: 10px;
+    width: 200px;
+    height: 200px;
+    text-align: justify;
+  }
+  </style>
 
   <body>
     <h1>Jamal's new pet</h1>
@@ -17,7 +46,7 @@
 	<a href="media.html"><button>Go To Photos and Videos Page</button></a>
 	<br>
   </body>
-  <body style="background-color:powderblue;">
+  <body>
     
     <h2>Contributors</h2>
     <a href="http://www.github.com/jamalhalili03">https://github.com/jamalhalili03</a> <br>
