--- a/media.html
+++ b/media.html
@@ -1,7 +1,9 @@
+<!DOCTYPE html>
 <html>
   
   <head>
-    <title>Photos and Videos</title>
+  <link rel="stylesheet" type="text/css" href="mystyle.css">.
+  <title>Photos and Videos</title>
   </head>
   
   <body>
