--- a/fictions.html
+++ b/fictions.html
@@ -1,10 +1,12 @@
+<!DOCTYPE html>
 <html>
 
   <head>
      <title>Fan Fictions</title>
+	 <link rel="stylesheet" type="text/css" href="mystyle.css">
   </head>
   
-  <body style="background-color:powderblue;">
+  <body>
     <h1>Jamal Fan Fictions!</h1>
         <p>Here you can find our fan fictions (some may still be in development)</p>
         <hr>
