Finish first CSS

--- a/contacts.html
+++ b/contacts.html
@@ -6,16 +6,45 @@
   <link rel="stylesheet" type="text/css" href="mystyle.css">
   </head>
   
+  <style>
+  p {
+    text-align: center;
+    color: darkblue;
+  } 
+  body {
+    background-color: lightgreen;
+  }
+  h1 {
+     text-align: center;
+	 color: darkblue;
+  }
+  h2 {
+     text-align: center;
+	 color: darkblue;
+  }
+  button {
+     text-align: center;
+  }
+  div {
+    border: 1px solid black;
+    padding: 10px;
+    width: 200px;
+    height: 200px;
+    text-align: justify;
+  }
+  </style>
+  
   <body>
   <h1>Contact us page</h1>
   <p>Here you can contact us</p>
   <hr>
   
   <h2>Index</h2>
-  <a href="index.html"><button>Go To Home</button></a>
-  <a href="fictions.html"><button>Go To Fan Fictions</button></a>
+  <center><a href="index.html"><button>Go To Home</button></a></center>
   <br>
-	<a href="media.html"><button>Go To Photos and Videos Page</button></a>
+  <center><a href="fictions.html"><button>Go To Fan Fictions</button></a></center>
+  <br>
+  <center><a href="media.html"><button>Go To Photos and Videos Page</button></a></center>
   <br>
   
   <h2>Emails</h2>
