--- a/fictions.html
+++ b/fictions.html
@@ -6,20 +6,50 @@
 	 <link rel="stylesheet" type="text/css" href="mystyle.css">
   </head>
   
+  <style>
+  p {
+    text-align: center;
+    color: darkblue;
+  } 
+  body {
+    background-color: lightgreen;
+  }
+  h1 {
+     text-align: center;
+	 color: darkblue;
+  }
+  h2 {
+     text-align: center;
+	 color: darkblue;
+  }
+  button {
+     text-align: center;
+  }
+  div {
+    border: 1px solid black;
+    padding: 10px;
+    width: 200px;
+    height: 200px;
+    text-align: justify;
+  }
+  </style>
+  
   <body>
     <h1>Jamal Fan Fictions!</h1>
-        <p>Here you can find our fan fictions (some may still be in development)</p>
-        <hr>
+    <p>Here you can find our fan fictions (some may still be in development)</p>
+    <hr>
     <h2>Index</h2>
-	<a href="index.html"><button>Go To Home</button></a>
-	<a href="contacts.html"><button>Go To Contact Us Page</button></a>
-        <br>
-	<a href="media.html"><button>Go To Photos and Videos Page</button></a>
+	<center><a href="index.html"><button>Go To Home</button></a></center>
+	<br>
+	<center><a href="contacts.html"><button>Go To Contact Us Page</button></a></center>
+    <br>
+	<center><a href="media.html"><button>Go To Photos and Videos Page</button></a></center>
 	<br>
     
 	<h2>Links</h2>
-	  <a href="https://drive.google.com/open?id=1-9_8CQMrBrBKAIq7SaLfXWyD-jwFUlOBFs9DR8VZPa8">Clockwork Jamal (in progress)</a> <br>
-	  <a href="https://drive.google.com/open?id=1GJ34LQuAXZ33Veb8kkK5XMZYiJW7zqxoDbsTieLMlAI">Jamalian (in progress)</a> <br>
+	<center><a href="https://drive.google.com/open?id=1-9_8CQMrBrBKAIq7SaLfXWyD-jwFUlOBFs9DR8VZPa8">Clockwork Jamal (in progress)</a></center> 
+	<br>
+	<center><a href="https://drive.google.com/open?id=1GJ34LQuAXZ33Veb8kkK5XMZYiJW7zqxoDbsTieLMlAI">Jamalian (in progress)</a></center> 
 	<br> 
   </body>
 
