--- a/index.html
+++ b/index.html
@@ -40,25 +40,27 @@
     <p>Welcome to the fanpage of Jamal Halili.</p>
     <hr>
 	<h2>Index</h2>
-	<a href="fictions.html"><button>Go To Fan Fictions</button></a>
-	<a href="contacts.html"><button>Go To Contact Us Page</button></a>
+	<center><a href="fictions.html"><button>Go To Fan Fictions</button></a></center>
 	<br>
-	<a href="media.html"><button>Go To Photos and Videos Page</button></a>
+	<center><a href="contacts.html"><button>Go To Contact Us Page</button></a></center>
+	<br>
+	<center><a href="media.html"><button>Go To Photos and Videos Page</button></a></center>
 	<br>
   </body>
   <body>
     
     <h2>Contributors</h2>
-    <a href="http://www.github.com/jamalhalili03">https://github.com/jamalhalili03</a> <br>
-    <a href="http://www.github.com/dylanneve1">https://github.com/dylanneve1</a>
+    <center><a href="http://www.github.com/jamalhalili03">https://github.com/jamalhalili03</a></center> 
+	<br>
+    <center><a href="http://www.github.com/dylanneve1">https://github.com/dylanneve1</a></center>
 	<br>
   </body>
   
   <body>
     <h2>Videos</h2>
-    <iframe width="420" height="315"
+    <center><iframe width="420" height="315"
     src="https://www.youtube.com/embed/7XHeDoDlYXI">
-    </iframe>
+    </iframe></center>
   </body>
   
 </html>
