--- a/media.html
+++ b/media.html
@@ -6,16 +6,45 @@
   <title>Photos and Videos</title>
   </head>
   
+  <style>
+  p {
+    text-align: center;
+    color: darkblue;
+  } 
+  body {
+    background-color: lightgreen;
+  }
+  h1 {
+     text-align: center;
+	 color: darkblue;
+  }
+  h2 {
+     text-align: center;
+	 color: darkblue;
+  }
+  button {
+     text-align: center;
+  }
+  div {
+    border: 1px solid black;
+    padding: 10px;
+    width: 200px;
+    height: 200px;
+    text-align: justify;
+  }
+  </style>
+  
   <body>
     <h1>Photos and Videos</h1>
     <p>Photos and Videos of Jamal</p>
     <hr>
     <h2>Index</h2>
-    <a href="fictions.html"><button>Go To Fan Fictions</button></a>
-	  <a href="contacts.html"><button>Go To Contact Us Page</button></a>
-	  <br>
-	  <a href="home.html"><button>Go To Home Page</button></a>
-	  <br>
+    <center><a href="fictions.html"><button>Go To Fan Fictions</button></a></center>
+	<br>
+	<center><a href="contacts.html"><button>Go To Contact Us Page</button></a></center>
+	<br>
+	<center><a href="index.html"><button>Go To Home Page</button></a></center>
+	<br>
   </body>
 
 </html>
