--- a/media.html
+++ b/media.html
@@ -46,5 +46,12 @@
 	<center><a href="index.html"><button>Go To Home Page</button></a></center>
 	<br>
   </body>
+  
+  <body>
+    <h2>Videos</h2>
+    <center><iframe width="420" height="315"
+    src="https://www.youtube.com/embed/7XHeDoDlYXI">
+    </iframe></center>
+  </body>
 
 </html>
