Add mobile support

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <link rel="stylesheet" type="text/css" href="mystyle.css">
     <title>Jamal's new pet</title>
-
+    <meta name="viewport" content="width=device-width">
   </head>
   
   <style>
