--- a/fictions.html
+++ b/fictions.html
@@ -4,6 +4,7 @@
   <head>
      <title>Fan Fictions</title>
 	 <link rel="stylesheet" type="text/css" href="mystyle.css">
+	 <meta name="viewport" content="width=device-width">
   </head>
   
   <style>
