--- a/media.html
+++ b/media.html
@@ -4,6 +4,7 @@
   <head>
   <link rel="stylesheet" type="text/css" href="mystyle.css">.
   <title>Photos and Videos</title>
+  <meta name="viewport" content="width=device-width">
   </head>
   
   <style>
