--- a/media.html
+++ b/media.html
@@ -2,9 +2,9 @@
 <html>
   
   <head>
-  <link rel="stylesheet" type="text/css" href="mystyle.css">.
-  <title>Photos and Videos</title>
-  <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" type="text/css" href="mystyle.css">.
+    <title>Photos and Videos</title>
+    <meta name="viewport" content="width=device-width">
   </head>
   
   <style>
@@ -41,18 +41,16 @@
     <hr>
     <h2>Index</h2>
     <center><a href="fictions.html"><button>Go To Fan Fictions</button></a></center>
-	<br>
-	<center><a href="contacts.html"><button>Go To Contact Us Page</button></a></center>
-	<br>
-	<center><a href="index.html"><button>Go To Home Page</button></a></center>
-	<br>
+    <br>
+    <center><a href="contacts.html"><button>Go To Contact Us Page</button></a></center>
+    <br>
+    <center><a href="index.html"><button>Go To Home Page</button></a></center>
+    <br>
   </body>
   
   <body>
     <h2>Videos</h2>
-    <center><iframe width="420" height="315"
-    src="https://www.youtube.com/embed/7XHeDoDlYXI">
-    </iframe></center>
+    <p>Coming added soon</p>  
   </body>
 
 </html>
