--- a/fictions.html
+++ b/fictions.html
@@ -10,18 +10,18 @@
   <style>
   p {
     text-align: center;
-    color: darkblue;
+    color: white;
   } 
   body {
-    background-color: lightgreen;
+    background-color: darkblue;
   }
   h1 {
      text-align: center;
-	 color: darkblue;
+	 color: white;
   }
   h2 {
      text-align: center;
-	 color: darkblue;
+	 color: white;
   }
   button {
      text-align: center;
@@ -47,9 +47,9 @@
 	<center><a href="media.html"><button>Go To Photos and Videos Page</button></a></center>
 	<br>
 	<h2>Links</h2>
-	<center><a href="https://drive.google.com/open?id=1-9_8CQMrBrBKAIq7SaLfXWyD-jwFUlOBFs9DR8VZPa8">Clockwork Jamal (in progress)</a></center> 
+	<center><a href="https://drive.google.com/open?id=1-9_8CQMrBrBKAIq7SaLfXWyD-jwFUlOBFs9DR8VZPa8" style="color: rgb(255,255,255)">Clockwork Jamal (in progress)</a></center> 
 	<br>
-	<center><a href="https://drive.google.com/open?id=1GJ34LQuAXZ33Veb8kkK5XMZYiJW7zqxoDbsTieLMlAI">Jamalian (in progress)</a></center> 
+	<center><a href="https://drive.google.com/open?id=1GJ34LQuAXZ33Veb8kkK5XMZYiJW7zqxoDbsTieLMlAI" style="color: rgb(255,255,255)">Jamalian (in progress)</a></center> 
 	<br> 
   </body>
 
