--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
   <style>
   p {
     text-align: center;
-    color: darkblue;
+    color: white;
   } 
   body {
-    background-color: lightgreen;
+    background-color: darkblue;
   }
   h1 {
      text-align: center;
-	 color: darkblue;
+	 color: white;
   }
   h2 {
      text-align: center;
-	 color: darkblue;
+	 color: white;
   }
   button {
      text-align: center;
@@ -50,9 +50,9 @@
   <body>
     
     <h2>Contributors</h2>
-    <center><a href="http://www.github.com/jamalhalili03">https://github.com/jamalhalili03</a></center> 
+    <center><a href="http://www.github.com/jamalhalili03" style="color: rgb(255,255,255)">https://github.com/jamalhalili03</a></center> 
 	<br>
-    <center><a href="http://www.github.com/dylanneve1">https://github.com/dylanneve1</a></center>
+    <center><a href="http://www.github.com/dylanneve1" style="color: rgb(255,255,255)">https://github.com/dylanneve1</a></center>
 	<br>
   </body>
   
