--- a/media.html
+++ b/media.html
@@ -10,18 +10,18 @@
   <style>
   p {
     text-align: center;
-    color: darkblue;
+    color: white;
   } 
   body {
-    background-color: lightgreen;
+    background-color: darkblue;
   }
   h1 {
      text-align: center;
-	 color: darkblue;
+	 color: white;
   }
   h2 {
      text-align: center;
-	 color: darkblue;
+	 color: white;
   }
   button {
      text-align: center;
