--- a/media.html
+++ b/media.html
@@ -11,17 +11,35 @@
   p {
     text-align: center;
     color: white;
+	font-family: "Arial Rounded MT Bold", "Helvetica Rounded", Arial, sans-serif;
+	font-size: 15px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 500;
+	line-height: 26.4px;
   } 
   body {
-    background-color: darkblue;
+    background-color: rgb(25,25,122);
   }
   h1 {
-     text-align: center;
-	 color: white;
+    text-align: center;
+	color: white;
+	font-family: "Arial Rounded MT Bold", "Helvetica Rounded", Arial, sans-serif;
+	font-size: 24px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 500;
+	line-height: 26.4px;
   }
   h2 {
-     text-align: center;
-	 color: white;
+    text-align: center;
+	color: white;
+	font-family: "Arial Rounded MT Bold", "Helvetica Rounded", Arial, sans-serif;
+	font-size: 24px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 500;
+	line-height: 26.4px;
   }
   button {
      text-align: center;
