Add Amcy's github to contributors

--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
 	<br>
     <center><a href="http://www.github.com/dylanneve1" style="color: rgb(255,255,255)">https://github.com/dylanneve1</a></center>
 	<br>
+	<center><a href="http://www.github.com/Th3-Marcu5" style="color: rgb(255,255,255)">https://github.com/Th3-Macu5</a></center>
+    <br>
   </body>
   
 </html>
