--- a/contacts.html
+++ b/contacts.html
@@ -4,55 +4,9 @@
   <head>
     <meta name="viewport" content="width=device-width">
     <title>Contact us</title>
-    <link rel="stylesheet" type="text/css" href="mystyle.css">
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
   </head>
-  
-  <style>
-  p {
-    text-align: center;
-    color: white;
-    font-family: "Arial Rounded MT Bold", "Helvetica Rounded", Arial, sans-serif;
-	font-size: 15px;
-	font-style: normal;
-	font-variant: normal;
-	font-weight: 500;
-	line-height: 26.4px;
-  } 
-  body {
-    background-color: rgb(25,25,122);
-  }
-  h1 {
-    text-align: center;
-	color: white;
-	font-family: "Arial Rounded MT Bold", "Helvetica Rounded", Arial, sans-serif;
-	font-size: 24px;
-	font-style: normal;
-	font-variant: normal;
-	font-weight: 500;
-	line-height: 26.4px;
-  }
-  h2 {
-    text-align: center;
-	color: white;
-	font-family: "Arial Rounded MT Bold", "Helvetica Rounded", Arial, sans-serif;
-	font-size: 24px;
-	font-style: normal;
-	font-variant: normal;
-	font-weight: 500;
-	line-height: 26.4px;
-  }
-  button {
-     text-align: center;
-  }
-  div {
-    border: 1px solid black;
-    padding: 10px;
-    width: 200px;
-    height: 200px;
-    text-align: justify;
-  }
-  </style>
-  
+
   <body>
     <h1>Contact us page</h1>
     <p>Here you can contact us</p>
