--- a/index.html
+++ b/index.html
@@ -2,71 +2,25 @@
 <html>
 
   <head>
-  <link rel="stylesheet" type="text/css" href="mystyle.css">
-  <title>Jamal's new pet</title>
-  <meta name="viewport" content="width=device-width">
+    <title>Jamal's new pet</title>
+    <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
   </head>
-  
-  <style>
-  p {
-    text-align: center;
-    color: white;
-	font-family: "Arial Rounded MT Bold", "Helvetica Rounded", Arial, sans-serif;
-	font-size: 15px;
-	font-style: normal;
-	font-variant: normal;
-	font-weight: 500;
-	line-height: 26.4px;
-  } 
-  body {
-    background-color: rgb(25,25,122);
-  }
-  h1 {
-    text-align: center;
-	color: white;
-	font-family: "Arial Rounded MT Bold", "Helvetica Rounded", Arial, sans-serif;
-	font-size: 24px;
-	font-style: normal;
-	font-variant: normal;
-	font-weight: 500;
-	line-height: 26.4px;
-  }
-  h2 {
-    text-align: center;
-	color: white;
-	font-family: "Arial Rounded MT Bold", "Helvetica Rounded", Arial, sans-serif;
-	font-size: 24px;
-	font-style: normal;
-	font-variant: normal;
-	font-weight: 500;
-	line-height: 26.4px;
-  }
-  button {
-    text-align: center;
-  }
-  div {
-    border: 1px solid black;
-    padding: 10px;
-    width: 200px;
-    height: 200px;
-    text-align: justify;
-  }
-  </style>
-
+ 
   <body>
-  <h1>Jamal's new pet</h1>
-  <p>Welcome to the fanpage of Jamal Halili.</p>
-  <hr>
-  <h2>Index</h2>
-  <center><a href="fictions.html"><button>Go To Fan Fictions</button></a></center>
-  <br>
-  <center><a href="contacts.html"><button>Go To Contact Us Page</button></a></center>
-  <br>
-  <center><a href="media.html"><button>Go To Photos and Videos Page</button></a></center>
-  <br>
+    <h1>Jamal's new pet</h1>
+    <p>Welcome to the fanpage of Jamal Halili.</p>
+    <hr>
+    <h2>Index</h2>
+    <center><a href="fictions.html"><button>Go To Fan Fictions</button></a></center>
+    <br>
+    <center><a href="contacts.html"><button>Go To Contact Us Page</button></a></center>
+    <br>
+    <center><a href="media.html"><button>Go To Photos and Videos Page</button></a></center>
+    <br>
   </body>
+  
   <body>
-    
     <h2>Contributors</h2>
     <center><a href="http://www.github.com/jamalhalili03" style="color: rgb(255,255,255)">https://github.com/jamalhalili03</a></center> 
 	<br>
