--- a/media.html
+++ b/media.html
@@ -2,56 +2,10 @@
 <html>
   
   <head>
-    <link rel="stylesheet" type="text/css" href="mystyle.css">.
     <title>Photos and Videos</title>
     <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
   </head>
-  
-  <style>
-  p {
-    text-align: center;
-    color: white;
-	font-family: "Arial Rounded MT Bold", "Helvetica Rounded", Arial, sans-serif;
-	font-size: 15px;
-	font-style: normal;
-	font-variant: normal;
-	font-weight: 500;
-	line-height: 26.4px;
-  } 
-  body {
-    background-color: rgb(25,25,122);
-  }
-  h1 {
-    text-align: center;
-	color: white;
-	font-family: "Arial Rounded MT Bold", "Helvetica Rounded", Arial, sans-serif;
-	font-size: 24px;
-	font-style: normal;
-	font-variant: normal;
-	font-weight: 500;
-	line-height: 26.4px;
-  }
-  h2 {
-    text-align: center;
-	color: white;
-	font-family: "Arial Rounded MT Bold", "Helvetica Rounded", Arial, sans-serif;
-	font-size: 24px;
-	font-style: normal;
-	font-variant: normal;
-	font-weight: 500;
-	line-height: 26.4px;
-  }
-  button {
-     text-align: center;
-  }
-  div {
-    border: 1px solid black;
-    padding: 10px;
-    width: 200px;
-    height: 200px;
-    text-align: justify;
-  }
-  </style>
   
   <body>
     <h1>Photos and Videos</h1>
