Clean pages into folder

--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -4,7 +4,7 @@
   <head>
     <meta name="viewport" content="width=device-width">
     <title>Contact us</title>
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheet.css">
   </head>
 
   <body>
@@ -12,7 +12,7 @@
     <p>Here you can contact us</p>
     <hr>
     <h2>Index</h2>
-    <center><a href="index.html"><button>Go To Home</button></a></center>
+    <center><a href="../index.html"><button>Go To Home</button></a></center>
     <br>
     <center><a href="fictions.html"><button>Go To Fan Fictions</button></a></center>
     <br>
