--- a/pages/fictions.html
+++ b/pages/fictions.html
@@ -4,7 +4,7 @@
   <head>
     <title>Fan Fictions</title>
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheet.css">
   </head>
   
   <body>
@@ -12,7 +12,7 @@
     <p>Here you can find our fan fictions (some may still be in development)</p>
     <hr>
     <h2>Index</h2>
-	<center><a href="index.html"><button>Go To Home</button></a></center>
+	<center><a href="../index.html"><button>Go To Home</button></a></center>
 	<br>
 	<center><a href="contacts.html"><button>Go To Contact Us Page</button></a></center>
     <br>
