--- a/pages/media.html
+++ b/pages/media.html
@@ -4,7 +4,7 @@
   <head>
     <title>Photos and Videos</title>
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheet.css">
   </head>
   
   <body>
@@ -16,7 +16,7 @@
     <br>
     <center><a href="contacts.html"><button>Go To Contact Us Page</button></a></center>
     <br>
-    <center><a href="index.html"><button>Go To Home Page</button></a></center>
+    <center><a href="../index.html"><button>Go To Home Page</button></a></center>
     <br>
   </body>
   
