--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <p>Welcome to the fanpage of Jamal Halili.</p>
     <hr>
     <h2>Index</h2>
-    <center><a href="fictions.html"><button>Go To Fan Fictions</button></a></center>
+    <center><a href="pages/fictions.html"><button>Go To Fan Fictions</button></a></center>
     <br>
-    <center><a href="contacts.html"><button>Go To Contact Us Page</button></a></center>
+    <center><a href="pages/contacts.html"><button>Go To Contact Us Page</button></a></center>
     <br>
-    <center><a href="media.html"><button>Go To Photos and Videos Page</button></a></center>
+    <center><a href="pages/media.html"><button>Go To Photos and Videos Page</button></a></center>
     <br>
   </body>
   
