Clean css into folder

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <title>Jamal's new pet</title>
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
   </head>
  
   <body>
