--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -4,7 +4,7 @@
   <head>
     <meta name="viewport" content="width=device-width">
     <title>Contact us</title>
-    <link rel="stylesheet" type="text/css" href="../stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="../css/stylesheet.css">
   </head>
 
   <body>
