--- a/pages/fictions.html
+++ b/pages/fictions.html
@@ -4,7 +4,7 @@
   <head>
     <title>Fan Fictions</title>
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" type="text/css" href="../stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="../css/stylesheet.css">
   </head>
   
   <body>
