Update with marquee
Be honest, its just better

--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -8,18 +8,20 @@
   </head>
 
   <body>
-    <h1>Contact us page</h1>
-    <p>Here you can contact us</p>
-    <hr>
-    <h2>Index</h2>
-    <center><a href="../index.html"><button>Go To Home</button></a></center>
-    <br>
-    <center><a href="fictions.html"><button>Go To Fan Fictions</button></a></center>
-    <br>
-    <center><a href="media.html"><button>Go To Photos and Videos Page</button></a></center>
-    <br>
-    <h2>Emails</h2>
-    <p>dylanneve1@gmail.com</p>
+    <marquee>
+      <h1>Contact us page</h1>
+      <p>Here you can contact us</p>
+      <hr>
+     <h2>Index</h2>
+     <center><a href="../index.html"><button>Go To Home</button></a></center>
+      <br>
+      <center><a href="fictions.html"><button>Go To Fan Fictions</button></a></center>
+     <br>
+     <center><a href="media.html"><button>Go To Photos and Videos Page</button></a></center>
+     <br>
+     <h2>Emails</h2>
+     <p>dylanneve1@gmail.com</p>
+    </marquee>
   </body>
 
 </html>
