THIS IS PLAGERISM

--- a/index.html
+++ b/index.html
@@ -1,33 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-  <head>
-    <title>Jamal's new pet</title>
-    <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
-  </head>
- 
-  <body>
-    <h1>Jamal's new pet</h1>
-    <p>Welcome to the fanpage of Jamal Halili.</p>
-    <hr>
-    <h2>Index</h2>
-    <center><a href="pages/fictions.html"><button>Go To Fan Fictions</button></a></center>
-    <br>
-    <center><a href="pages/contacts.html"><button>Go To Contact Us Page</button></a></center>
-    <br>
-    <center><a href="pages/media.html"><button>Go To Photos and Videos Page</button></a></center>
-    <br>
-  </body>
-  
-  <body>
-    <h2>Contributors</h2>
-    <center><a href="http://www.github.com/jamalhalili03" style="color: rgb(255,255,255)">https://github.com/jamalhalili03</a></center> 
-	<br>
-    <center><a href="http://www.github.com/dylanneve1" style="color: rgb(255,255,255)">https://github.com/dylanneve1</a></center>
-	<br>
-	<center><a href="http://www.github.com/Th3-Marcu5" style="color: rgb(255,255,255)">https://github.com/Th3-Macu5</a></center>
-    <br>
-  </body>
-  
-</html>
+REMOVED BY DYLAN >:(
